--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trial-Edge-Homepage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Libre+Baskerville:ital@1&family=Montserrat:wght@300;500&family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -20,8 +26,11 @@
               src="./assets/img/weather-color-moon-cloud-light-svgrepo-com.svg"
             />
           </button>
-          <span style="font-size: 16px">Today Weather</span>
+          <span class="span-weather" style="font-size: 16px"
+            >Today Weather</span
+          >
         </div>
+
         <div class="nav right">
           <button class="button">
             <img
@@ -35,6 +44,7 @@
               src="./assets/img/reward-svgrepo-com.svg"
             />
           </button>
+
           <button class="button">
             <img
               class="icon bell"
@@ -53,15 +63,24 @@
       <div class="card">
         <img class="card-logo" src="./assets/img/microsoft-svgrepo-com.png" />
         <!-- <h1>Microsoft</h1> -->
-        <div class="card-bar" id="search">
-          <img class="card-icon" src="./assets/img/search-svgrepo-com.png" />
-          <!-- <p class="card-searchtext">Search the web</p> -->
-          <img class="card-icon" src="./assets/img/icons8-bing-48.png" />
+        <div class="bar">
+          <div class="card-bar" id="search">
+            <img class="card-icon" src="./assets/img/search-svgrepo-com.png" />
+            <!-- <p class="card-searchtext">Search the web</p> -->
+            <img class="card-icon" src="./assets/img/icons8-bing-48.png" />
+          </div>
         </div>
       </div>
       <div class="content-container">
         <!-- <img class="logo" src="./assets/img/microsoft-svgrepo-com.svg" -->
         <div class="item-container">
+          <div class="item">
+            <div class="item-logo">
+              <!-- <div class="item-title">
+                your logo here
+              </div> -->
+            </div>
+          </div>
           <div class="item">
             <div class="item-logo">
               <!-- <div class="item-title">
